##################################################
 Revision history for Log::Log4perl
##################################################
1.32 (not yet released)
   *    (ms) [RT 63053] Fixed for qw() {} deprecated (Todd Rinaldo)
   *    (ms) [RT 62674] Fixed call to deprecated form of UNIVERSAL::can (Karen
             Etheridge).
   *    (ms) [RT 62896] Log::Log4perl::Appender::ScreenColoredLevels now 
             inherits from Log::Log4perl::Appender::Screen and therefore
             supports the utf8 flag.
   *    (ms) [RT 64318] Andrew Sayers provided a better error message for
             "threshold needs to be uppercase".
   *    (ms) CharleyDixon fixed LOGWARN when :no_extra_logdie_message is 
             in use to no longer exit().

1.31 (2010/10/27)
  *     (ms) Fixed the number of skipped tests for Windows for previous fix
             of [RT 60665].

1.30 (2010/08/30)
   *    (ms) [RT 60665] HUP handlers are stacked on top of each other now,
             to make sure that multiple file appenders recreate multiple
             files and not just one (patch provided by Karen Etheridge).
   *    (ms) [RT 60197] Fixed uninitialized value warnings with
             the multiline appender and provided a test case (patch provided
             by Karen Etheridge)
   *    (ms) [rt.cpan.org #59617] Fixed system-wide threshold without appender
             thresholds. Bug reported by Dmitry Bigunyak.
   *    (ms) [rt.cpan.org #24884] Using require() instead of incomplete
             logic in L4p::Util::module_available(). local __DIE__
             handler takes care of user-defined __DIE__ handlers 
             ignoring $^S (suggested by Eric Wilhelm and others).
   *    (ms) [rt.cpan.org #60386] Fixed init_and_watch() which 
             double-bumped the caller_level and led to uninitialized 
             values in the pattern layout. Thanks to Mitja Bartsch for 
             the report.