@@ -2,6 +2,8 @@
  Revision history for Log::Log4perl
 ##################################################
 1.32 (not yet released)
+   *    (ms) Fixed %T caller_depth with wrapper_register(), reported
+             by David Christensen.
    *    (ms) [RT 63053] Fixed for qw() {} deprecated (Todd Rinaldo)
    *    (ms) [RT 62674] Fixed call to deprecated form of UNIVERSAL::can (Karen
              Etheridge).
